5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1708_3035.log
== TEST (2019-04-29 15:17:48) 
-- CODE:
from math import*
x = radians(float(input("x: ")))

if (0 <= x) and (x < 90) or (180 <= x) and (x < 270):
	f = sin(x)
	print(round(f, 4))
elif (90 <= x) and (x < 180) or (270 <= x) and (x < 360):
	f = cos(x)
	print(round(f, 4))
else:
	print("entrada invalida")
-- OUTPUT:
0.7071
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:17:55) 
-- CODE:
from math import*
x = radians(float(input("x: ")))

if (0 <= x) and (x < 90) or (180 <= x) and (x < 270):
	f = sin(x)
	print(round(f, 4))
elif (90 <= x) and (x < 180) or (270 <= x) and (x < 360):
	f = cos(x)
	print(round(f, 4))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.258165
-- TEST CASE 1:
---- input:
45.0
---- correct output:
0.7071
---- user output:
0.7071
-- TEST CASE 2:
---- input:
275.0
---- correct output:
0.0872
---- user output:
-0.9962
-- TEST CASE 3:
---- input:
358.0
---- correct output:
0.9994
---- user output:
-0.0349
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:19:26) 
-- CODE:
from math import*
x = radians(float(input("x: ")))

if (0 <= x) and (x < 90) or (180 <= x) and (x < 270):
	f = sin(x)
	print(round(f, 4))
elif (90 <= x) and (x < 180) or (270 <= x) and (x < 360):
	f = cos(x)
	print(round(f, 4))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.161566
-- TEST CASE 1:
---- input:
45.0
---- correct output:
0.7071
---- user output:
0.7071
-- TEST CASE 2:
---- input:
275.0
---- correct output:
0.0872
---- user output:
-0.9962
-- TEST CASE 3:
---- input:
358.0
---- correct output:
0.9994
---- user output:
-0.0349
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:19:27) 
-- CODE:
from math import*
x = radians(float(input("x: ")))

if (0 <= x) and (x < 90) or (180 <= x) and (x < 270):
	f = sin(x)
	print(round(f, 4))
elif (90 <= x) and (x < 180) or (270 <= x) and (x < 360):
	f = cos(x)
	print(round(f, 4))
else:
	print("entrada invalida")
-- OUTPUT:
0.7071
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:21:34) 
-- CODE:
from math import*
x = radians(float(input("x: ")))

if (0 <= x) and (x < 90) or (180 <= x) and (x < 270):
	f = sin(x)
	print(round(f, 4))
elif (x >= 90) and (x < 180) or (270 <= x) and (x < 360):
	f = cos(x)
	print(round(f, 4))
else:
	print("entrada invalida")
-- OUTPUT:
0.7071
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:21:44) 
-- CODE:
from math import*
x = radians(float(input("x: ")))

if (0 <= x) and (x < 90) or (180 <= x) and (x < 270):
	f = sin(x)
	print(round(f, 4))
elif (x >= 90) and (x < 180) or (270 <= x) and (x < 360):
	f = cos(x)
	print(round(f, 4))
else:
	print("entrada invalida")
-- OUTPUT:
0.7071
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:25:08) 
-- CODE:
from math import*
x = radians(float(input("x: ")))

if (0 <= x) and (x < 90) or (180 <= x) and (x < 270):
	f = sin(x)
	print(round(f, 4))
elif (90 <= x) and (x < 180) or (270 <= x) and (x < 360):
	f = cos(x)
	print(round(f, 4))
else:
	print("entrada invalida")
-- OUTPUT:
0.7071
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:25:43) 
-- CODE:
from math import*
x = radians(float(input("x: ")))

if (0 <= x) and (x < 90) or (180 <= x) and (x < 270):
	f = sin(x)
	print(round(f, 4))
elif (90 <= x) and (x < 180) or (270 <= x) and (x < 360):
	f = cos(x)
	print(round(f, 4))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.173654
-- TEST CASE 1:
---- input:
45.0
---- correct output:
0.7071
---- user output:
0.7071
-- TEST CASE 2:
---- input:
275.0
---- correct output:
0.0872
---- user output:
-0.9962
-- TEST CASE 3:
---- input:
358.0
---- correct output:
0.9994
---- user output:
-0.0349
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:25:47) 
-- CODE:
from math import*
x = radians(float(input("x: ")))

if (0 <= x) and (x < 90) or (180 <= x) and (x < 270):
	f = sin(x)
	print(round(f, 4))
elif (90 <= x) and (x < 180) or (270 <= x) and (x < 360):
	f = cos(x)
	print(round(f, 4))
else:
	print("entrada invalida")
-- OUTPUT:
0.7071
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:26:02) 
-- CODE:
from math import*
x = radians(float(input("x: ")))

if (0 <= x) and (x < 90) or (180 <= x) and (x < 270):
	f = sin(x)
	print(round(f, 4))
elif (90 <= x) and (x < 180) or (270 <= x) and (x < 360):
	f = cos(x)
	print(round(f, 2))
else:
	print("entrada invalida")
-- OUTPUT:
0.7071
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:26:39) 
-- CODE:
from math import*
x = radians(float(input("x: ")))

if (0 <= x) and (x < 90) or (180 <= x) and (x < 270):
	f = sin(x)
	print(round(f, 4))
else:
	if (90 <= x) and (x < 180) or (270 <= x) and (x < 360):
	f = cos(x)
	print(round(f, 4))
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 9
    f = cos(x)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:27:03) 
-- CODE:
from math import*
x = radians(float(input("x: ")))

if (0 <= x) and (x < 90) or (180 <= x) and (x < 270):
	f = sin(x)
	print(round(f, 4))
else:
	if (90 <= x) and (x < 180) or (270 <= x) and (x < 360):
		f = cos(x)
		print(round(f, 4))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.13265
-- ERROR:
  File "/home/codebench/codes/1708/3035/main.py", line 11
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:27:04) 
-- CODE:
from math import*
x = radians(float(input("x: ")))

if (0 <= x) and (x < 90) or (180 <= x) and (x < 270):
	f = sin(x)
	print(round(f, 4))
else:
	if (90 <= x) and (x < 180) or (270 <= x) and (x < 360):
		f = cos(x)
		print(round(f, 4))
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:27:28) 
-- CODE:
from math import*
x = radians(float(input("x: ")))

if (0 <= x) and (x < 90) or (180 <= x) and (x < 270):
	f = sin(x)
	print(round(f, 4))
elif (90 <= x) and (x < 180) or (270 <= x) and (x < 360):
		f = cos(x)
		print(round(f, 4))
else:
	print("entrada invalida")
-- OUTPUT:
0.7071
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:28:17) 
-- CODE:
from math import*
x = float(input("x: "))

if (0 <= x) and (x < 90) or (180 <= x) and (x < 270):
	f = radians(sin(x))
	print(round(f, 4))
elif (90 <= x) and (x < 180) or (270 <= x) and (x < 360):
		f = radians(cos(x))
		print(round(f, 4))
else:
	print("entrada invalida")
-- OUTPUT:
0.0149
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:29:53) 
-- CODE:
from math import*
x = float(input("x: "))

if (0 <= x) and (x < 90) or (180 <= x) and (x < 270):
	f = radians(sin(x))
	print(round(f, 4))
elif (90 <= x) and (x < 180) or (270 <= x) and (x < 360):
		f = radians(cos(x))
		print(round(f, 4))
else:
	print("entrada invalida")
-- OUTPUT:
0.0149
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:29:59) 
-- CODE:
from math import*
x = float(input("x: "))

if (0 <= x) and (x < 90) or (180 <= x) and (x < 270):
	f = radians(sin(x))
	print(round(f, 4))
elif (90 <= x) and (x < 180) or (270 <= x) and (x < 360):
		f = radians(cos(x))
		print(round(f, 4))
else:
	print("entrada invalida")
-- OUTPUT:
0.0149
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:30:37) 
-- CODE:
from math import*
x = float(input("x: "))

if (0 <= x) and (x < 90) or (180 <= x) and (x < 270):
	f = sin(x)
	print(radians(round(f, 4)))
elif (90 <= x) and (x < 180) or (270 <= x) and (x < 360):
		f = cos(x)
		print(radians(round(f, 4)))
else:
	print("entrada invalida")
-- OUTPUT:
0.01485100660521975
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:31:53) 
-- CODE:
from math import*
x = float(input("x: "))

if (0 <= x) and (x < 90) or (180 <= x) and (x < 270):
	f = sin(x)
	print(round(radians(f, 4)))
elif (90 <= x) and (x < 180) or (270 <= x) and (x < 360):
		f = cos(x)
		print(round(radians(f, 4)))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(radians(f, 4)))
TypeError: radians() takes exactly one argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:32:24) 
-- CODE:
from math import*
x = float(input("x: "))

if (0 <= x) and (x < 90) or (180 <= x) and (x < 270):
	f = sin(x)
	print(round(radians(f), 4))
elif (90 <= x) and (x < 180) or (270 <= x) and (x < 360):
		f = cos(x)
		print(round(radians(f), 4))
else:
	print("entrada invalida")
-- OUTPUT:
0.0149
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:32:51) 
-- CODE:
from math import*
x = float(input("x: "))

if (0 <= x) and (x < 90) or (180 <= x) and (x < 270):
	f = sin(x)
	print(round(radians(f), 4))
elif (90 <= x) and (x < 180) or (270 <= x) and (x < 360):
	f = cos(x)
	print(round(radians(f), 4))
else:
	print("entrada invalida")
-- OUTPUT:
0.0149
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:32:56) 
-- CODE:
from math import*
x = float(input("x: "))

if (0 <= x) and (x < 90) or (180 <= x) and (x < 270):
	f = sin(x)
	print(round(radians(f), 4))
elif (90 <= x) and (x < 180) or (270 <= x) and (x < 360):
	f = cos(x)
	print(round(radians(f), 4))
else:
	print("entrada invalida")
-- OUTPUT:
0.0149
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:35:07) 
-- CODE:
from math import*
x = float(input("x: "))

if (0 <= x) and (x < 90) or (180 <= x) and (x < 270):
	f = radians(x)
	F = sin(f)
	print(round(F, 4))
elif (90 <= x) and (x < 180) or (270 <= x) and (x < 360):
	f = radians(x)
	F = cos(f)
	print(round(F, 4)) 
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.126336
-- TEST CASE 1:
---- input:
45.0
---- correct output:
0.7071
---- user output:
0.7071
-- TEST CASE 2:
---- input:
275.0
---- correct output:
0.0872
---- user output:
0.0872
-- TEST CASE 3:
---- input:
358.0
---- correct output:
0.9994
---- user output:
0.9994
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
